force-app/main/default/objects/Fee_Management__c/Fee_Management__c.object-meta.xml
<CustomObject>
    <label>Fee Management</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>