force-app/main/default/objects/Fee_Management__c/fields/Examination_Fee__c.field-meta.xml
<CustomField>
    <fullName>Examination_Fee__c</fullName>
    <label>Examination Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>