force-app/main/default/objects/Fee_Management__c/fields/Extra_Activity_Fee__c.field-meta.xml
<CustomField>
    <fullName>Extra_Activity_Fee__c</fullName>
    <label>Extra Activity Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>