force-app/main/default/objects/Fee_Management__c/fields/S_N__c.field-meta.xml
<CustomField>
    <fullName>S_N__c</fullName>
    <displayFormat>SN-{0000}</displayFormat>
    <label>S.N.</label>
    <type>AutoNumber</type>
</CustomField>