force-app/main/default/objects/Fee_Management__c/fields/Store_Fee_Details__c.field-meta.xml
<CustomField>
    <fullName>Store_Fee_Details__c</fullName>
    <label>Store_Fee_Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>