force-app/main/default/objects/Fee_Management__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Fee Managements</relationshipLabel>
    <relationshipName>Fee_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>