force-app/main/default/objects/Fee_Management__c/validationRules/Validation_On_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_On_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>Due_Amount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Paid_Amount__c</errorDisplayField>
    <errorMessage>Please Check Amount</errorMessage>
</ValidationRule>