force-app/main/default/objects/Fee_Management__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Fee_Type__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Student__c</columns>
    <columns>Duration__c</columns>
    <columns>Store_Fee_Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>